<resources>
    <string name="app_name">Robotics_Lab</string>
    <string name="title_activity_login.xml">activity_login.xml</string>

    <string name="hamburger_menu">Hamburger Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="nav_header_title">RoboticsLab</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_product">Add Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="upload_pictures">Upload Pictures</string>
    <string name="upload_product_to_db">Upload Product to DB</string>


    <string name="product_name">Product Name</string>
    <string name="product_manufacturer">Product Manufacturer</string>
    <string name="product_description">Product Description</string>
    <string name="product_useful_urls">Product Useful URLs</string>
    <string name="product_stock">Stock: %1$s</string>
    <string name="product_msrp">MSRP: %1$s</string>
    <string name="product_picture">Product_Picture</string>


    <string name="toolbar_title">Toolbar Title</string>
    <string name="menu_btn">Menu_Btn</string>
    <string name="log_out">Log Out</string>
    <string name="are_you_sure_you_want_to_delete_this_product">Are you sure you want to delete this product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_changes">Save Changes</string>
    <string name="equipment_name">Equipment Name</string>
    <string name="manufacturer_company_name">Manufacturer/Company Name</string>
    <string name="model_number">Model Number</string>
    <string name="equipment_description">Equipment Description</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="submit">Submit</string>
    <string name="add_equipment">Add Equipment</string>
    <string name="products">Products</string>
    <string name="equipment">Equipment</string>
    <string name="equipment_image">Equipment pic</string>
    <string name="equipment_name_placeholder">equipment name</string>
    <string name="manufacturer_placeholder">manufacturer</string>
    <string name="model_number_placeholder">model number</string>
    <string name="equipment_description_placeholder">equipment description</string>

</resources>