<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".EditProductFragment">

        <EditText
            android:id="@+id/editTextProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            />

        <EditText
            android:id="@+id/editTextProductManufacturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_manufacturer"
            />

        <EditText
            android:id="@+id/editTextProductStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_stock"
            />

        <EditText
            android:id="@+id/editTextProductMSRP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_msrp"
            />

        <EditText
            android:id="@+id/editTextProductDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_description"
            />

        <EditText
            android:id="@+id/editTextProductUsefulUrls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_useful_urls"
            />

        <Button
            android:id="@+id/btnSaveChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:layout_gravity="center"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>