<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Equipment Image -->
    <ImageView
        android:id="@+id/imageViewEquipment"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/equipment_image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_product_image" />

    <!-- Equipment Name -->
    <TextView
        android:id="@+id/equipmentNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/equipment_name_placeholder"
        android:textSize="18sp"
        android:textStyle="bold" />


    <!-- Model Number -->
    <TextView
        android:id="@+id/modelNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/model_number_placeholder"
        android:textSize="16sp" />



</LinearLayout>
