<?xml version="1.0" encoding="utf-8"?>

<!-- Header Layout for the NavigationView -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/nav_header_vertical_spacing"
    android:layout_marginTop="16dp"
    android:background="?attr/colorPrimary">

    <!-- ImageView for the header image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/ic_product_image"
        android:layout_gravity="center_horizontal"/>

    <!-- TextView for the title -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"/>

    <!-- TextView for the subtitle -->
    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"/>
</LinearLayout>
