<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductFragment"
    android:layout_marginTop="60dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageViewProduct"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:contentDescription="@string/product_picture"
            android:src="@drawable/ic_product_image" />

        <TextView
            android:id="@+id/textViewProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewProductManufacturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/textViewProductMSRP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/textViewProductStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/textViewProductDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewProductUsefulUrls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autoLink="web"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
    <!-- ConstraintLayout to hold the BottomNavigationView -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:background="@color/accentColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Add your custom buttons here -->
            <Button
                android:id="@+id/btnEditProduct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit_product"
                android:onClick="onEditButtonClick" />

            <Button
                android:id="@+id/btnDeleteProduct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete_product"
                android:onClick="onDeleteButtonClick" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>